<resources>
    <string name="app_name">Log In</string>
    <string name="app_name_reg">Sign Up</string>
    <!-- Strings related to login -->
    <string name="app_subname">Or</string>
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook">Continue con facebook</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="app_namereg">Sign In</string>
    <string name="registratre">No te encuentras registrado ? Registrate aqui</string>
    <string name="prompt_user">USER</string>

    <string name="action_settings">Settings</string>
    <string name="titulo_actividad_detalle">Actividad De Detalle</string>
    <string name="nombre_transicion_imagen">imagen_compartida</string>
    <string name="prompt_passwordcreate">CREATE PASSWORD</string>
</resources>
